--- a/src/Tooltip.css
+++ b/src/Tooltip.css
@@ -24,3 +24,11 @@
   border-width: 0.375rem 0.375rem 0.375rem 0;
   border-color: transparent #2c2c2c transparent transparent;
 }
+
+.tooltipContainer p:first-child {
+  margin-top: 0;
+}
+
+.tooltipContainer p:last-child {
+  margin-bottom: 0;
+}
