--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,11 @@ h1, h2 {
   padding: 0.125rem;
 }
 
+.button.outline.buttonLink {
+  text-decoration: none;
+  display: inline-block;
+}
+
 .button.underline {
   border: none;
   border-radius: 0;
@@ -96,4 +101,8 @@ h1, h2 {
   position: absolute;
   right: 0;
   pointer-events: none;
+}
+
+li {
+  padding-bottom: 0.75rem;
 }
